v1 of practice log

--- a/app/views/piles/practice_card.html.erb
+++ b/app/views/piles/practice_card.html.erb
@@ -16,4 +16,11 @@ For development:
 Vocab <%= @pile.vocab %> <br>
 Vocab_w <%= @pile.vocab_w %> <br>
 Vocab_l <%= @pile.vocab_l %> <br>
-Vocab_priority <%= @pile.vocab_priority %>
+Vocab_priority <%= @pile.vocab_priority %> <br>
+
+<br>
+Vocab records <br>
+e2c_w <%= @vocab.e2c_w %> <br>
+e2c_l <%= @vocab.e2c_l %> <br>
+c2e_w <%= @vocab.c2e_w %> <br>
+c2e_l <%= @vocab.c2e_l %> <br>
