--- a/app/views/vocabs/show.html.erb
+++ b/app/views/vocabs/show.html.erb
@@ -47,7 +47,7 @@
     </dl>
 
     <div class="btn-group btn-group-justified">
-      <a href="/vocabs" class="btn btn-primary">
+      <a href="/modules/<%= @vocab.lesson_id %>" class="btn btn-primary">
         Back
       </a>
       <a href="/vocabs/<%= @vocab.id %>/edit" class="btn btn-warning">
